Updated organisation and Documentation.

--- a/resources/index.html
+++ b/resources/index.html
@@ -25,8 +25,8 @@
         -->
   <script src="/js/neutralino.js"></script>
   <!-- Your app's source files -->
-  <script src="/js/graphitejs_v0.1.0.js"></script>
-  <script src="/js/main.js"></script>
+  <!-- <script src="/js/graphitejs_v0.1.0.js"></script> -->
+  <script src="/js/main.js" type="module"></script>
 </body>
 
 </html>
